# ahe-ics

./: .dockerignore  .editorconfig  .env.example  .env.shared.example  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.alpine.release  Dockerfile.alpine.shared  Dockerfile.release  Dockerfile.shared  README.md  README.pl.md  SECURITY.md  cliff-release.toml  cliff.toml  docker-compose.example.yml  docker-compose.shared.example.yml  renovate.json  rustfmt.toml
.github/: pull_request_template.md  security-advisory-issue.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: audit.yml  cargo-check.yml  release.yml  validate.yml
scripts/: bump-version.sh  security-audit.sh  smoke-test-image.sh  stage-docker-binaries.sh
src/: app.rs  cache.rs  config.rs  constants.rs  ics.rs  lib.rs  main.rs
src/api/: auth.rs  exams.rs  indexes.rs  mod.rs  schedule.rs  student.rs
src/cache/: ics.rs  mod.rs  student.rs  token.rs
src/config/: dedicated.rs  mod.rs  parse.rs  shared.rs  types.rs
src/i18n/: en.rs  mod.rs  pl.rs
src/ics/: mod.rs  render.rs
src/models/: exam.rs  mod.rs  plan.rs  student.rs  token.rs
src/web/: calendar.rs  calendar_service.rs  dto.rs  mod.rs  openapi.rs  real_ip.rs  routes.rs  shared_routes.rs
src/web/dto/: calendar.rs
src/web/routes/: calendar.rs  health.rs
src/web/utils/: mod.rs  real_ip.rs
