[package]
name = "ahe-ics"
version = "0.4.1"
edition = "2024"

[dependencies]
# Runtime + error handling
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.100"

# HTTP server
axum = "0.8.8"

# HTTP client
reqwest = { version = "0.13.1", features = [
  "json",
  "form",
  "gzip",
  "brotli",
  "deflate",
] }

# Serialization + date/time
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }

# ICS generation
icalendar = "0.17.6"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }

# Caching
moka = { version = "0.12.13", features = ["future"] }

# Environment config
dotenvy = "0.15.7"
argon2 = "0.5.3"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
